# odyssey

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  railway.toml  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  _test_phase2.py  _test_phase3.py  _verify_phases.py  alembic.ini  cleanup_quests.py  docker-compose.yml  pyproject.toml  run_seed.py  skills-lock.json  test_llm.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_profile_settings.py  003_bilingual_content.py  004_assessment_justifications.py  005_badges.py  006_world.py  007_phase4_civilization.py  008_extended_profile.py  009_skill_domains.py  010_goals_system.py  011_notifications.py  012_learning_paths.py  013_migrate_legacy.py  014_cleanup_legacy.py  015_add_conversation_history.py  016_civilization_era_buildings.py  017_world_era_resources.py  018_user_settings_unified_llm.py  019_path_estimated_hours_building_target.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/agent/: __init__.py  models.py  persona.py  router.py  schemas.py  service.py
backend/app/analytics/: insight_engine.py  router.py  schemas.py  service.py
backend/app/assessments/: consistency.py  engine.py  models.py  progress_logger.py  prompt_builder.py  router.py  schemas.py  service.py  skill_updater.py
backend/tests/: conftest.py  test_assessments.py  test_auth.py  test_credentials.py  test_passport.py  test_progress.py  test_projects.py  test_quests.py  test_skills.py  test_submissions.py
docs/: mvp-prd.md  (+14 more)
(+357 files in other folders)
